--- a/boot.html
+++ b/boot.html
@@ -1,24 +1,62 @@
 <!doctype html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <title>Boostrap Starter Page</title>
+    <style>
+      div.container{
+      width: 50%; margin-top: 90px;
+      margin-left: 90px;
+      }
+      div input {
+        width: 75%;
+        margin: 20px;
+        border-radius: 5px;
+      }
+      a:hover , a:link , a:visited , a:active{
+        border-color: solid blue;
+      }
+      div.signup{
+        color: white;
+        width: 60px;
+        margin-left: 60px;
+      }
+    </style>
+    <title>Sign up</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
 <body>
 
-  <h1>Hello Coursera!</h1>
+  <h1 style="text-align: center; font-weight: 450">Sign up Here</h1>
+  <img style="float: right;"src="C:\Users\sabbe\coursera\js\1.png" width=33%>
+  <div class="container">
+    <div>
+    <input type="text" name="Name" placeholder="Full Name">
+  </div>
+  <div>
+    <input type="text" name="Age" placeholder="Age">
+  </div>
+  <div>
+    <input type="text" name="Email" placeholder="Email">
+  </div>
+  <div>
+    <input type="text" name="Password" placeholder="Create new password">
+  </div>
+  <div>
+    <input type="text" name="confirmation" placeholder="Confirm your Password">
+  </div>
+  <div class="signup">
+    <a href="https://image.shutterstock.com/image-photo/funny-raccoon-showing-sign-peace-260nw-1200904669.jpg" target="_blank">Sign up</a>
+  </div>
+  <p> Already a member? <a href="https://i.pinimg.com/originals/42/59/a2/4259a232cfa72d1e23ab7e8b11b20df6.jpg" target="_blank">Sign in</a></p>
+  <div>
+    <p>
+    Ismart Putra &copy; Copyright 2020
+  </p>
+  </div>
+  </div>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-3.5.1.min.js"></script>
