--- a/Module-3-Solution/index.html
+++ b/Module-3-Solution/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-default">
-		<div class="container-fluid">
+		<div class="container">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html">Food,LLC</a>
 			</div>
