--- a/Module-3-Solution/index.html
+++ b/Module-3-Solution/index.html
@@ -21,11 +21,11 @@
     
   </button>
   <div class="dropdown-menu dropdown-menu-right">
-    <a class="dropdown-item active" href="chicken.html">Chicken</a>
+    <a class="dropdown-item active text-center" href="chicken.html">Chicken</a>
     <div class="dropdown-divider"></div>
-    <a class="dropdown-item" href="beef.html">Beef</a>
+    <a class="dropdown-item text-center" href="beef.html">Beef</a>
     <div class="dropdown-divider"></div>
-    <a class="dropdown-item" href="sushi.html">Sushi</a>
+    <a class="dropdown-item text-center" href="sushi.html">Sushi</a>
   </div>
 </div>
 
