--- a/Hackathon/index.html
+++ b/Hackathon/index.html
@@ -10,10 +10,11 @@
 	<link rel = "icon" href = "#" type = "image/x-icon">
 </head>
 <body>
-	<header>
+		<nav class="navbar sticky-top ">
 		<div class="alert alert-primary">
             <strong>Success!</strong> You should <a href="#" class="alert-link">read this message</a>.
         </div> 
+        </nav>
 		<nav class="navbar navbar-expand-sm">
 			<div class="container">
 			<img src="#"  >
@@ -83,7 +84,6 @@
 			
 			</div>
 		</nav>
-	</header>
 	<div class="container-fluid backgroundimg">
 		<h1 class="imp">Some things has to change as per present Situatons</h1>
 		<p style="width: 400px">We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.</p>
@@ -130,6 +130,66 @@
     		</div>
     	</div>
     </div>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src=".jpg" alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+      	<h3>Hi Guys </h3>
+      	<p>heheehyhhhbdcsh</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src=".jpg" alt="Second slide">
+       <div class="carousel-caption d-none d-md-block">
+       	<h3>Hi Guys </h3>
+       	<p>heheehyhhhbdcsh</p>
+       </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src=".jpg" alt="Third slide">
+       <div class="carousel-caption d-none d-md-block">
+       	<h3>Hi Guys </h3>
+       	<p>heheehyhhhbdcsh</p>
+       </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<footer>
+	<div class="container">
+		<ul class="nav">
+					<li class="nav-item">
+						<a class="nav-link" style="color: white;" href="#">Disclaimer</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" style="color: white;" href="#">Disclaimer</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" style="color: white;" href="#">Disclaimer</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" style="color: white;" href="#">Disclaimer</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" style="color: white;" href="#">Disclaimer</a>
+					</li>
+				</ul>
+	</div>
+	<p style="text-align: center; color: white"> &copy; Tech Titans <a href="##" style="color: white;">Contact us !</a></p>
+</footer>
     <script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
