--- a/Hackathon/index.html
+++ b/Hackathon/index.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="styles.css">
 <head>
 	<title> Justice For women </title>
-	<link rel = "icon" href = "#" type = "image/x-icon">
+	<link rel = "icon" href = "profile.jpeg" type = "image/x-icon">
 </head>
 <body>
 		<nav class="navbar sticky-top ">
@@ -16,8 +16,8 @@
         </div> 
         </nav>
 		<nav class="navbar navbar-expand-sm">
-			<div class="container">
-			<img src="#"  >
+			<div class="container-fluid">
+			<img style="width: 130px;" src="profile.jpeg"  >
 			<div class="navbar-right">
 				<ul class="nav">
 					<li class="nav-item">
