--- a/Hackathon/index.html
+++ b/Hackathon/index.html
@@ -13,7 +13,7 @@
 <body>
 		<nav class="navbar sticky-top ">
 		<div class="alert alert-primary">
-            <strong>Success!</strong> You should <a href="#" class="alert-link">read this message</a>.
+            <strong>Talk to Someone now!</strong> Call our Helpline on <a href="tel:9294649999" class="alert-link">Here.</a>You can also <a href="chat.html" class="alert-link" target="_blank"> Chat online</a>,<a href="skype:live:sabbellaputrareddy?call" class="alert-link"> Videocall</a> or <a href="mailto:sabbellaputrareddy@gmail.com? " class="alert-link"> Email</a>
         </div> 
         </nav>
 		<nav class="navbar navbar-expand-sm">
@@ -25,19 +25,19 @@
 						<a class="nav-link" href="#"><i class="fa fa-home"></i></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Active</a>
+						<a class="nav-link" href="#">BLOG</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Active</a>
+						<a class="nav-link" href="#">NEWS&MEDIA</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Active</a>
+						<a class="nav-link" href="#">RESOURCES</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Active</a>
+						<a class="nav-link" href="#">YOUR STORIES</a>
 					</li>
 					<li class="nav-item">
-						<a href="#"><button type="button" class="btn btn-success" >Donate</button></a>
+						<a href="#"><button type="button" class="btn btn-success" >DONATE</button></a>
 					</li>
 					<li class="nav-item">
 						<a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -57,25 +57,25 @@
 				</ul>
 				<ul class="nav">
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" href="#">Active</a>
+						<a style="color: #0000b3;" class="nav-link" href="#">UNDERSTANDING ABUSE |</a>
 					</li>
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" href="#">Active</a>
+						<a style="color: #0000b3;" class="nav-link" href="#">REPORT ISSUES |</a>
 					</li>
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" href="#">Active</a>
+						<a style="color: #0000b3;" class="nav-link" href="#">GET SUPPORT |</a>
 					</li>
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" href="#">Active</a>
+						<a style="color: #0000b3;" class="nav-link" href="#">HEALTHY RELATIONSHIPS |</a>
 					</li>
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" href="#">Active</a>
+						<a style="color: #0000b3;" class="nav-link" href="#">AWARENESS |</a>
 					</li>
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" href="#">Active</a>
+						<a style="color: #0000b3;" class="nav-link" href="#">WHO WE ARE |</a>
 					</li>
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" href="#">Active</a>
+						<a style="color: #0000b3;" class="nav-link" href="#">GET INVOLVED |</a>
 					</li>
 					<li class="nav-item">
 						<a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
