--- a/Hackathon/index.html
+++ b/Hackathon/index.html
@@ -21,63 +21,84 @@
 			<img style="width: 130px;" src="profile.jpeg"  >
 			<div class="navbar-right">
 				<ul class="nav">
-					<li class="nav-item">
+					<li class="nav-item d-none d-lg-block ">
 						<a class="nav-link" href="#"><i class="fa fa-home"></i></a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item d-none d-lg-block">
 						<a class="nav-link" href="#">BLOG</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item d-none d-lg-block">
 						<a class="nav-link" href="#">NEWS&MEDIA</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item d-none d-lg-block">
 						<a class="nav-link" href="#">RESOURCES</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item d-none d-lg-block">
 						<a class="nav-link" href="#">YOUR STORIES</a>
 					</li>
 					<li class="nav-item">
 						<a href="#"><button type="button" class="btn btn-success" >DONATE</button></a>
 					</li>
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+						<a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 					</li>
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+						<a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 					</li>
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+						<a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 					</li>
 					<li class="nav-item">
-						<a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+						<a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
 					</li>
 					<li class="nav-item">
-						<a href="#"><button type="button" class="btn btn-primary">Need Help</button></a>
+						<a href="#"><button type="button" class="btn btn-primary d-none d-sm-block">Need Help</button></a>
+					</li>
+					<li class="nav-item">
+						<div class="dropdown">
+  <button type="button" class="btn btn-primary dropdown-toggle d-block d-lg-none" data-toggle="dropdown"><i class="fa fa-list" aria-hidden="true"></i>
+
+    
+  </button>
+  <div class="dropdown-menu dropdown-menu-right">
+  	<a href="#"><button type="button" class="btn btn-primary d-sm-none">Need Help</button></a>
+  	<div class="dropdown-divider d-sm-none"></div>
+    <a class="dropdown-item active text-center " href="#">HOME</a>
+    <div class="dropdown-divider "></div>
+    <a class="dropdown-item text-center " href="#">BLOG</a>
+    <div class="dropdown-divider "></div>
+    <a class="dropdown-item text-center " href="#">NEWS & MEDIA</a>
+    <div class="dropdown-divider "></div>
+    <a class="dropdown-item text-center " href="#">RESOURCES</a>
+    <div class="dropdown-divider "></div>
+    <a class="dropdown-item text-center " href="#">YOUR STORIES</a>
+  </div>
+</div>
 					</li>
 				</ul>
 				<ul class="nav">
-					<li class="nav-item">
+					<li class="nav-item d-none d-lg-block">
 						<a style="color: #0000b3;" class="nav-link" href="#">UNDERSTANDING ABUSE |</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item d-none d-lg-block">
 						<a style="color: #0000b3;" class="nav-link" href="#">REPORT ISSUES |</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item d-none d-lg-block">
 						<a style="color: #0000b3;" class="nav-link" href="#">GET SUPPORT |</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item d-none d-lg-block">
 						<a style="color: #0000b3;" class="nav-link" href="#">HEALTHY RELATIONSHIPS |</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item d-none d-lg-block">
 						<a style="color: #0000b3;" class="nav-link" href="#">AWARENESS |</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item d-none d-lg-block">
 						<a style="color: #0000b3;" class="nav-link" href="#">WHO WE ARE |</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item d-none d-lg-block">
 						<a style="color: #0000b3;" class="nav-link" href="#">GET INVOLVED |</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item d-none d-lg-block">
 						<a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
 					</li>
 				</ul>
