--- a/Hackathon/index.html
+++ b/Hackathon/index.html
@@ -119,35 +119,35 @@
     </div>
     <div class="container-fluid">
     	<div class="row">
-    		<div class="col-md-4 img1">
+    		<div class="col-md-4 col-sm-6 img1">
     			<p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
     		</div>
-    		<div class="col-md-4 img2">
+    		<div class="col-md-4 col-sm-6 img2">
     			<p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
     		</div>
-    		<div class="col-md-4 img3">
-    			<p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
-    		</div>
-    	</div>
-    	<div class="row">
-    		<div class="col-md-4 img4">
-    			<p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
-    		</div>
-    		<div class="col-md-4 img5">
-    			<p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
-    		</div>
-    		<div class="col-md-4 img6">
+    		<div class="col-md-4 col-sm-12 img3">
     			<p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
     		</div>
     	</div>
     	<div class="row">
-    		<div class="col-md-4 img7">
+    		<div class="col-md-4 col-sm-6 img4">
     			<p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
     		</div>
-    		<div class="col-md-4 img8">
+    		<div class="col-md-4 col-sm-6 img5">
     			<p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
     		</div>
-    		<div class="col-md-4 img9">
+    		<div class="col-md-4 col-sm-12 img6">
+    			<p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+    		</div>
+    	</div>
+    	<div class="row">
+    		<div class="col-md-4 col-sm-6 img7">
+    			<p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+    		</div>
+    		<div class="col-md-4 col-sm-6 img8">
+    			<p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+    		</div>
+    		<div class="col-md-4 col-sm-12 img9">
     			<p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
     		</div>
     	</div>
@@ -160,21 +160,21 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src=".jpg" alt="First slide">
+      <img class="d-block w-100" src="profile.jpeg" alt="First slide">
       <div class="carousel-caption d-none d-md-block">
       	<h3>Hi Guys </h3>
       	<p>heheehyhhhbdcsh</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src=".jpg" alt="Second slide">
+      <img class="d-block w-100" src="profile.jpeg" alt="Second slide">
        <div class="carousel-caption d-none d-md-block">
        	<h3>Hi Guys </h3>
        	<p>heheehyhhhbdcsh</p>
        </div>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src=".jpg" alt="Third slide">
+      <img class="d-block w-100" src="profile.jpeg" alt="Third slide">
        <div class="carousel-caption d-none d-md-block">
        	<h3>Hi Guys </h3>
        	<p>heheehyhhhbdcsh</p>
@@ -197,10 +197,10 @@
 						<a class="nav-link" style="color: white;" href="#">Disclaimer</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" style="color: white;" href="#">Disclaimer</a>
+						<a class="nav-link" style="color: white;" href="#">Privacy Policy</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" style="color: white;" href="#">Disclaimer</a>
+						<a class="nav-link" style="color: white;" href="#">Terms of Use</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" style="color: white;" href="#">Disclaimer</a>
@@ -210,7 +210,7 @@
 					</li>
 				</ul>
 	</div>
-	<p style="text-align: center; color: white"> &copy; Tech Titans <a href="##" style="color: white;">Contact us !</a></p>
+	<p style="text-align: center; color: white"> &copy; Tech Titans <a href="tel:9294649999" style="color: white;">Contact us !</a></p>
 </footer>
     <script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
