--- a/Hackathon/index.html
+++ b/Hackathon/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
       <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width initial-scale=1">
+      <meta name="viewport" content="width=device-width,initial-scale=1">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -108,7 +108,7 @@
 		</nav>
 	<div class="container-fluid backgroundimg">
 		<h1 class="imp">Some things has to change as per present Situatons</h1>
-		<p style="width: 400px">We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.</p>
+		<p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.</p>
 		<a href="#"><button type="button" class="btn btn-primary" >How to Start ?</button></a>
 		<a href="#"><button type="button" class="btn btn-primary" >About our Project</button></a>
 	</div>
