--- a/Hackathon/index.html
+++ b/Hackathon/index.html
@@ -25,16 +25,16 @@
 						<a class="nav-link" href="#"><i class="fa fa-home"></i></a>
 					</li>
 					<li class="nav-item d-none d-lg-block">
-						<a class="nav-link" href="#">BLOG</a>
+						<a class="nav-link" href="blog.html">BLOG</a>
 					</li>
 					<li class="nav-item d-none d-lg-block">
-						<a class="nav-link" href="#">NEWS&MEDIA</a>
+						<a class="nav-link" href="newsandmedia.html">NEWS&MEDIA</a>
 					</li>
 					<li class="nav-item d-none d-lg-block">
 						<a class="nav-link" href="#">RESOURCES</a>
 					</li>
 					<li class="nav-item d-none d-lg-block">
-						<a class="nav-link" href="#">YOUR STORIES</a>
+						<a class="nav-link" href="yourstories.html">YOUR STORIES</a>
 					</li>
 					<li class="nav-item">
 						<a href="#"><button type="button" class="btn btn-success" >DONATE</button></a>
@@ -65,38 +65,38 @@
   	<div class="dropdown-divider d-sm-none"></div>
     <a class="dropdown-item active text-center " href="#">HOME</a>
     <div class="dropdown-divider "></div>
-    <a class="dropdown-item text-center " href="#">BLOG</a>
+    <a class="dropdown-item text-center " href="blog.html">BLOG</a>
     <div class="dropdown-divider "></div>
-    <a class="dropdown-item text-center " href="#">NEWS & MEDIA</a>
+    <a class="dropdown-item text-center " href="newsandmedia.html">NEWS & MEDIA</a>
     <div class="dropdown-divider "></div>
     <a class="dropdown-item text-center " href="#">RESOURCES</a>
     <div class="dropdown-divider "></div>
-    <a class="dropdown-item text-center " href="#">YOUR STORIES</a>
+    <a class="dropdown-item text-center " href="yourstories.html">YOUR STORIES</a>
   </div>
 </div>
 					</li>
 				</ul>
 				<ul class="nav">
 					<li class="nav-item d-none d-lg-block">
-						<a style="color: #0000b3;" class="nav-link" href="#">UNDERSTANDING ABUSE |</a>
+						<a style="color: #0000b3;" class="nav-link" href="understandingabuse.html">UNDERSTANDING ABUSE |</a>
 					</li>
 					<li class="nav-item d-none d-lg-block">
-						<a style="color: #0000b3;" class="nav-link" href="#">REPORT ISSUES |</a>
+						<a style="color: #0000b3;" class="nav-link" href="reportissues.html">REPORT ISSUES |</a>
 					</li>
 					<li class="nav-item d-none d-lg-block">
-						<a style="color: #0000b3;" class="nav-link" href="#">GET SUPPORT |</a>
+						<a style="color: #0000b3;" class="nav-link" href="getsupport.html">GET SUPPORT |</a>
 					</li>
 					<li class="nav-item d-none d-lg-block">
-						<a style="color: #0000b3;" class="nav-link" href="#">HEALTHY RELATIONSHIPS |</a>
+						<a style="color: #0000b3;" class="nav-link" href="healthyrelationships.html">HEALTHY RELATIONSHIPS |</a>
 					</li>
 					<li class="nav-item d-none d-lg-block">
-						<a style="color: #0000b3;" class="nav-link" href="#">AWARENESS |</a>
+						<a style="color: #0000b3;" class="nav-link" href="awareness.html">AWARENESS |</a>
 					</li>
 					<li class="nav-item d-none d-lg-block">
-						<a style="color: #0000b3;" class="nav-link" href="#">WHO WE ARE |</a>
+						<a style="color: #0000b3;" class="nav-link" href="whoweare.html">WHO WE ARE |</a>
 					</li>
 					<li class="nav-item d-none d-lg-block">
-						<a style="color: #0000b3;" class="nav-link" href="#">GET INVOLVED |</a>
+						<a style="color: #0000b3;" class="nav-link" href="getinvolved.html">GET INVOLVED |</a>
 					</li>
 					<li class="nav-item d-none d-lg-block">
 						<a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
