--- a/Hackathon/blog.html
+++ b/Hackathon/blog.html
@@ -16,9 +16,157 @@
             <strong>Talk to Someone now!</strong> Call our Helpline on <a href="tel:9294649999" class="alert-link">Here.</a>You can also <a href="chat.html" class="alert-link" target="_blank"> Chat online</a>,<a href="skype:live:sabbellaputrareddy?call" class="alert-link"> Videocall</a> or <a href="mailto:sabbellaputrareddy@gmail.com? " class="alert-link"> Email</a>
         </div> 
         </nav>
-        <div class="container-fluid" style="background-color: blue; color: white;">
-          <h1>Blog</h1>
+        <nav class="navbar navbar-expand-sm">
+      <div class="container-fluid">
+      <img style="width: 130px;" src="profile.jpeg"  >
+      <div class="navbar-right">
+        <ul class="nav">
+          <li class="nav-item d-none d-lg-block ">
+            <a class="nav-link" href="#"><i class="fa fa-home"></i></a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a class="nav-link" href="blog.html">BLOG</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a class="nav-link" href="newsandmedia.html">NEWS&MEDIA</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a class="nav-link" href="#">RESOURCES</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a class="nav-link" href="yourstories.html">YOUR STORIES</a>
+          </li>
+          <li class="nav-item">
+            <a href="#"><button type="button" class="btn btn-success" >DONATE</button></a>
+          </li>
+          <li class="nav-item">
+            <a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+          </li>
+          <li class="nav-item">
+            <a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+          </li>
+          <li class="nav-item">
+            <a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+          </li>
+          <li class="nav-item">
+            <a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+          </li>
+          <li class="nav-item">
+            <a href="#"><button type="button" class="btn btn-primary d-none d-sm-block">Need Help</button></a>
+          </li>
+          <li class="nav-item">
+            <div class="dropdown">
+  <button type="button" class="btn btn-primary dropdown-toggle d-block d-lg-none" data-toggle="dropdown"><i class="fa fa-list" aria-hidden="true"></i>
+
+    
+  </button>
+  <div class="dropdown-menu dropdown-menu-right">
+    <a href="#"><button type="button" class="btn btn-primary d-sm-none">Need Help</button></a>
+    <div class="dropdown-divider d-sm-none"></div>
+    <a class="dropdown-item text-center " href="#">HOME</a>
+    <div class="dropdown-divider "></div>
+    <a class="dropdown-item active text-center " href="blog.html">BLOG</a>
+    <div class="dropdown-divider "></div>
+    <a class="dropdown-item text-center " href="newsandmedia.html">NEWS & MEDIA</a>
+    <div class="dropdown-divider "></div>
+    <a class="dropdown-item text-center " href="#">RESOURCES</a>
+    <div class="dropdown-divider "></div>
+    <a class="dropdown-item text-center " href="yourstories.html">YOUR STORIES</a>
+  </div>
+</div>
+          </li>
+        </ul>
+        <ul class="nav">
+          <li class="nav-item d-none d-lg-block">
+            <a style="color: #0000b3;" class="nav-link" href="understandingabuse.html">UNDERSTANDING ABUSE |</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a style="color: #0000b3;" class="nav-link" href="reportissues.html">REPORT ISSUES |</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a style="color: #0000b3;" class="nav-link" href="getsupport.html">GET SUPPORT |</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a style="color: #0000b3;" class="nav-link" href="healthyrelationships.html">HEALTHY RELATIONSHIPS |</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a style="color: #0000b3;" class="nav-link" href="awareness.html">AWARENESS |</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a style="color: #0000b3;" class="nav-link" href="whoweare.html">WHO WE ARE |</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a style="color: #0000b3;" class="nav-link" href="getinvolved.html">GET INVOLVED |</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+          </li>
+        </ul>
+      </div>
+      
+      </div>
+    </nav>
+    <div class="container-fluid">
+      <h1 style="color: #0000b3; margin: 5%;">Blog</h1>
+      <p style="text-align: center; color: #0000b3; margin: 5%;">A space for sharing all things body image and eating disorders related. All blog entries are written by our staff, those with a lived experience and professionals.</p>
+    </div>   
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-4 col-sm-6 blogimg1">
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
         </div>
+        <div class="col-md-4 col-sm-6 blogimg2">
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+        <div class="col-md-4 col-sm-12 blogimg3">
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 col-sm-6 blogimg4">
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+        <div class="col-md-4 col-sm-6 blogimg5">
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+        <div class="col-md-4 col-sm-12 blogimg6">
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 col-sm-6 blogimg7">
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+        <div class="col-md-4 col-sm-6 blogimg8">
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+        <div class="col-md-4 col-sm-12 blogimg9">
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+      </div>
+    </div>
+    <footer>
+  <div class="container">
+    <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="#">Disclaimer</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="#">Privacy Policy</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="#">Terms of Use</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="#">Disclaimer</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="#">Disclaimer</a>
+          </li>
+        </ul>
+  </div>
+  <p style="text-align: center; color: white"> &copy; Tech Titans <a href="tel:9294649999" style="color: white;">Contact us !</a></p>
+</footer>
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
