--- a/Hackathon/yourstories.html
+++ b/Hackathon/yourstories.html
@@ -16,9 +16,260 @@
             <strong>Talk to Someone now!</strong> Call our Helpline on <a href="tel:9294649999" class="alert-link">Here.</a>You can also <a href="chat.html" class="alert-link" target="_blank"> Chat online</a>,<a href="skype:live:sabbellaputrareddy?call" class="alert-link"> Videocall</a> or <a href="mailto:sabbellaputrareddy@gmail.com? " class="alert-link"> Email</a>
         </div> 
         </nav>
-        <div class="container-fluid" style="background-color: blue; color: white;">
-          <h1>Your Stories</h1>
+        <nav class="navbar navbar-expand-sm">
+      <div class="container-fluid">
+      <img style="width: 130px;" src="profile.jpeg"  >
+      <div class="navbar-right">
+        <ul class="nav">
+          <li class="nav-item d-none d-lg-block ">
+            <a class="nav-link" href="#"><i class="fa fa-home"></i></a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a class="nav-link" href="blog.html">BLOG</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a class="nav-link" href="newsandmedia.html">NEWS&MEDIA</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a class="nav-link" href="#">RESOURCES</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a class="nav-link" href="yourstories.html">YOUR STORIES</a>
+          </li>
+          <li class="nav-item">
+            <a href="#"><button type="button" class="btn btn-success" >DONATE</button></a>
+          </li>
+          <li class="nav-item">
+            <a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+          </li>
+          <li class="nav-item">
+            <a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+          </li>
+          <li class="nav-item">
+            <a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+          </li>
+          <li class="nav-item">
+            <a style="color: #0000b3;" class="nav-link d-none d-lg-block" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+          </li>
+          <li class="nav-item">
+            <a href="#"><button type="button" class="btn btn-primary d-none d-sm-block">Need Help</button></a>
+          </li>
+          <li class="nav-item">
+            <div class="dropdown">
+  <button type="button" class="btn btn-primary dropdown-toggle d-block d-lg-none" data-toggle="dropdown"><i class="fa fa-list" aria-hidden="true"></i>
+
+    
+  </button>
+  <div class="dropdown-menu dropdown-menu-right">
+    <a href="#"><button type="button" class="btn btn-primary d-sm-none">Need Help</button></a>
+    <div class="dropdown-divider d-sm-none"></div>
+    <a class="dropdown-item text-center " href="#">HOME</a>
+    <div class="dropdown-divider "></div>
+    <a class="dropdown-item text-center " href="blog.html">BLOG</a>
+    <div class="dropdown-divider "></div>
+    <a class="dropdown-item text-center " href="newsandmedia.html">NEWS & MEDIA</a>
+    <div class="dropdown-divider "></div>
+    <a class="dropdown-item text-center " href="#">RESOURCES</a>
+    <div class="dropdown-divider "></div>
+    <a class="dropdown-item active text-center " href="yourstories.html">YOUR STORIES</a>
+  </div>
+</div>
+          </li>
+        </ul>
+        <ul class="nav">
+          <li class="nav-item d-none d-lg-block">
+            <a style="color: #0000b3;" class="nav-link" href="understandingabuse.html">UNDERSTANDING ABUSE |</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a style="color: #0000b3;" class="nav-link" href="reportissues.html">REPORT ISSUES |</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a style="color: #0000b3;" class="nav-link" href="getsupport.html">GET SUPPORT |</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a style="color: #0000b3;" class="nav-link" href="healthyrelationships.html">HEALTHY RELATIONSHIPS |</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a style="color: #0000b3;" class="nav-link" href="awareness.html">AWARENESS |</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a style="color: #0000b3;" class="nav-link" href="whoweare.html">WHO WE ARE |</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a style="color: #0000b3;" class="nav-link" href="getinvolved.html">GET INVOLVED |</a>
+          </li>
+          <li class="nav-item d-none d-lg-block">
+            <a style="color: #0000b3;" class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+          </li>
+        </ul>
+      </div>
+      
+      </div>
+    </nav>
+          <h1 style="color: #0000b3; margin: 5%;">All Stories</h1>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-4">
+                <h2>Every experience of an eating disorder is unique.Sharing stories from personal experience allows for reflection, understanding and connection.</h2>
+                <h3>Want to share your story?</h3>
+                <div class="text-center"><button type="button" class="btn btn-success text-center" >Share Your Story</button></div>
+              </div>
+              <div class="col-md-8">
+                The personal stories below have been shared by those touched by an eating disorder, whether that be the person themselves, their family or friends. These stories give insight into the challenges and triumphs faced when managing and recovering from an eating disorder.The personal stories below have been shared by those touched by an eating disorder, whether that be the person themselves, their family or friends. These stories give insight into the challenges and triumphs faced when managing and recovering from an eating disorder.The personal stories below have been shared by those touched by an eating disorder, whether that be the person themselves, their family or friends. These stories give insight into the challenges and triumphs faced when managing and recovering from an eating disorder.The personal stories below have been shared by those touched by an eating disorder, whether that be the person themselves, their family or friends. These stories give insight into the challenges and triumphs faced when managing and recovering from an eating disorder.
+              </div>
+            </div>
+          </div>
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="##" alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h3>Hi Guys </h3>
+        <p>heheehyhhhbdcsh</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="##" alt="Second slide">
+       <div class="carousel-caption d-none d-md-block">
+        <h3>Hi Guys </h3>
+        <p>heheehyhhhbdcsh</p>
+       </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="##" alt="Third slide">
+       <div class="carousel-caption d-none d-md-block">
+        <h3>Hi Guys </h3>
+        <p>heheehyhhhbdcsh</p>
+       </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<div class="container-fluid" style="background-color: blue;">
+            <h1 style="color: white; margin: 5% blue; ">Looking For An Issue ?</h1>
+            <div class="row">
+        <div class="col-md-3 issue ">
+          <h3>Issue</h3>
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
         </div>
+        <div class="col-md-3 issue">
+          <h3>Issue</h3>
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+        <div class="col-md-3 issue">
+          <h3>Issue</h3>
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+        <div class="col-md-3 issue">
+          <h3>Issue</h3>
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3 issue">
+          <h3>Issue</h3>
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+        <div class="col-md-3 issue">
+          <h3>Issue</h3>
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+        <div class="col-md-3 issue">
+          <h3>Issue</h3>
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+        <div class="col-md-3 issue">
+          <h3>Issue</h3>
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3 issue">
+          <h3>Issue</h3>
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+        <div class="col-md-3 issue">
+          <h3>Issue</h3>
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+        <div class="col-md-3 issue">
+          <h3>Issue</h3>
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+      </div>
+    </div>
+
+          <div class="container-fluid">
+            <h1 style="color: #0000b3; margin: 5%;">All Stories</h1>
+            <div class="row">
+        <div class="col-md-4 col-sm-6 yourstoriesimg1">
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+        <div class="col-md-4 col-sm-6 yourstoriesimg2">
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+        <div class="col-md-4 col-sm-12 yourstoriesimg3">
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 col-sm-6 yourstoriesimg4">
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+        <div class="col-md-4 col-sm-6 yourstoriesimg5">
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+        <div class="col-md-4 col-sm-12 yourstoriesimg6">
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 col-sm-6 yourstoriesimg7">
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+        <div class="col-md-4 col-sm-6 yourstoriesimg8">
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+        <div class="col-md-4 col-sm-12 yourstoriesimg9">
+          <p>We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential.We believe everyone’s experience of an eating disorder or body image issue is unique and access to effective services is essential</p>
+        </div>
+      </div>
+      <div class="text-center"><button type="button" class="btn btn-success text-center" >View All Stories</button></div>
+          </div>
+    <footer>
+  <div class="container">
+    <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="#">Disclaimer</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="#">Privacy Policy</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="#">Terms of Use</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="#">Disclaimer</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: white;" href="#">Disclaimer</a>
+          </li>
+        </ul>
+  </div>
+  <p style="text-align: center; color: white"> &copy; Tech Titans <a href="tel:9294649999" style="color: white;">Contact us !</a></p>
+</footer>
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
